<resources>
    <string name="app_name">УБЗ ZZBO</string>
    <string name="sortable_indicator_content_description">Sortable Indicator</string>
    <string name="default_header">Header %1$d</string>
    <string name="default_cell">Data [%1$d:%2$d]</string>

    <!-- Preference CONFIG Titles -->
    <string name="system_header">Система</string>
    <string name="inert_name">Инертные материалы</string>
    <string name="report_header">Отчеты</string>

    <!-- SYSTEM Preferences -->
    <string name="android_id">ID устройства</string>
    <string name="plc_mac">Mac контроллера</string>
    <string name="plc_ip">IP адрес PLC</string>
    <string name="hmi_ip">IP адрес HMI</string>
    <string name="plc_port">PORT контроллера</string>
    <string name="scada_ip">IP адрес PC</string>
    <string name="rest_ip">REST IP адрес</string>
    <string name="server_update">Сервер обновления</string>
    <string name="hardkey">Лицензионный ключ</string>

    <!-- REPORTS Preferences -->
    <string name="send_mail_title">Отправка отчетов на почту (Ежедневно)</string>
    <string name="time_sync_title">Время синхронизации</string>
    <string name="attachment_summary_on">Отправка активирована</string>
    <string name="attachment_summary_off">Отправка отключена</string>
    <string name="title_activity_config">ConfigActivity</string>

    <!-- Preference COMPLECTATION Titles -->
    <string name="complectation_header">Комплектация</string>
    <string name="other_header">ОБЩИЕ</string>
    <string name="dk_header">ДОЗИРУЮЩИЙ КОМПЛЕКС</string>
    <string name="dc_header">ДОЗАТОР ЦЕМЕНТА</string>
    <string name="dch_header">ДОЗАТОР ХИМИИ</string>
    <string name="dw_header">ДОЗАТОР ВОДЫ</string>

    <!-- COMPLECTATION Preferences -->
    <string name="inert_bunker_counter">Кол-во бункеров ДК</string>
    <string name="silos_counter">Кол-во силосов</string>
    <string name="water2">Шлановая вода</string>
    <string name="humidity_mixer_sensor">Датчик влажности в смесителе</string>
    <string name="chemy_counter">Кол-во химии</string>
    <string name="transporter_type">Тип транспортера</string>
    <string name="fibra_option">Дозатор фибры</string>
    <string name="drop_conveyor">Конвейер выгрузки</string>
    <string name="mix_capacity">Объем смесителя</string>
    <string name="hydro_gate">2 катушки на затворе сброса</string>
    <string name="combo_bunker_option">На бункерах по одной заслонке</string>
    <string name="title_activity_config2">Config2Activity</string>


    <string name="mixer_header">СМЕСИТЕЛЬ</string>
    <string name="skipLT_header">СКИП/ЛЕНТА</string>
    <string name="production_number">Номер производства</string>
    <string name="title_activity_item_detail_host">ItemDetailHostActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>


    <string name="connect_ftp_server">Подключить FTP-сервер</string>
    <string name="disconnect_ftp_server">Отключить FTP-сервер</string>

    <string name="backup">Резервное копирование</string>

    <string name="input_server_ip">Пожалуйста, введите ip сервера</string>
    <string name="input_server_port">Пожалуйста, введите порт сервера</string>
    <string name="input_user">Пожалуйста, введите имя пользователя</string>
    <string name="input_password">Пожалуйста, введите пароль пользователя</string>
    <string name="title_server_ip_and_port">Пожалуйста, введите ip и порт сервера</string>
    <string name="title_user">Имя пользователя:</string>
    <string name="title_password">Пароль:</string>

    <string name="run_ftp_server">Запустить FTP-сервер</string>
    <string name="stop_ftp_server">Остановить сервер FTP</string>

    <string name="download_file_tips">Do you want to download the file?</string>
    <string name="choose_file_to_upload">Choose file to upload</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="file">Файл</string>
    <string name="dir">Направление</string>
    <string name="link">Ссылка</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>