<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory app:title="@string/system_header">
        <EditTextPreference
            app:key="plc_ip"
            app:title="@string/plc_ip"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="scada_ip"
            app:title="@string/scada_ip"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="rest_server_ip"
            app:title="@string/rest_ip"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="server_update"
            app:title="@string/server_update"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="production_number"
            app:title="@string/production_number"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="hardkey"
            app:title="@string/hardkey"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/report_header">

        <SwitchPreferenceCompat
            app:key="yandex_option"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/send_mail_title" />

        <EditTextPreference
            app:dependency="yandex_option"
            app:key="time_sync"
            app:title="@string/time_sync_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory >
        <Preference
            app:icon="@android:drawable/ic_menu_save"
            app:key="saveBtn"
            app:title="Сохранить" />
    </PreferenceCategory>

</PreferenceScreen>