<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/dk_header">

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/transporter_type"
            app:entryValues="@array/transporter_type"
            app:key="transporter_type_lp"
            app:title="@string/transporter_type"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="dk_count"
            app:title="@string/inert_bunker_counter"
            app:useSimpleSummaryProvider="true" />

        <PreferenceCategory android:title="РАЗДЕЛЕНИЕ ЗАСЛОНОК">
            <SwitchPreference
                android:defaultValue="false"
                android:key="hopper1"
                android:title="Бункер 11 - 12" />
            <EditTextPreference
                app:key="impulse_dose11"
                app:title="Импульсная дозация 11"
                app:useSimpleSummaryProvider="true" />
            <EditTextPreference
                app:key="impulse_dose12"
                app:title="Импульсная дозация 12"
                app:useSimpleSummaryProvider="true"
                android:dependency="hopper1" />
            <SwitchPreference
                android:defaultValue="false"
                android:key="hopper2"
                android:title="Бункер 21 - 22" />
            <EditTextPreference
                app:key="impulse_dose21"
                app:title="Импульсная дозация 21"
                app:useSimpleSummaryProvider="true" />
            <EditTextPreference
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:key="impulse_dose22"
                app:title="Импульсная дозация 22"
                app:useSimpleSummaryProvider="true"
                android:dependency="hopper2"/>
            <SwitchPreference
                android:defaultValue="false"
                android:key="hopper3"
                android:title="Бункер 31 - 32" />
            <EditTextPreference
                app:key="impulse_dose31"
                app:title="Импульсная дозация 31"
                app:useSimpleSummaryProvider="true" />
            <EditTextPreference
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:key="impulse_dose32"
                app:title="Импульсная дозация 32"
                app:useSimpleSummaryProvider="true"
                android:dependency="hopper3"/>
            <SwitchPreference
                android:defaultValue="false"
                android:key="hopper4"
                android:title="Бункер 41 - 42" />
            <EditTextPreference
                app:key="impulse_dose41"
                app:title="Импульсная дозация 41"
                app:useSimpleSummaryProvider="true" />

            <EditTextPreference
                app:key="impulse_dose42"
                app:title="Импульсная дозация 42"
                app:useSimpleSummaryProvider="true"
                android:dependency="hopper4"/>
        </PreferenceCategory>

        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:key="flap_pulse"
            app:title="Импульс заслонки, сек"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="flap_pause"
            app:title="Пауза заслонки, сек"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dialogMessage="Минимальный вес начала дозациии"
            app:key="min_weight_dk"
            app:title="Минимальный вес, кг"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="time_discharge_dk"
            app:title="Время разгрузки, сек"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="time_vibro_oper"
            app:title="Время работы вибраторов, сек"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="time_vibro_pause"
            app:title="Время паузы вибраторов, сек"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="time_belt_oper_dk"
            app:title="Время работы ленты ДК, сек"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="time_belt_pause_dk"
            app:title="Время останова ленты ДК, сек"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="reverse_conveyor"
            android:title="Кнопка реверс конвейера ДК" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="saveCategory">
        <Preference
            app:icon="@android:drawable/ic_menu_save"
            app:key="saveBtn"
            app:title="Записать в PLC" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_loading">
        <Preference android:widgetLayout="@layout/preference_loading_placeholder" />
    </PreferenceCategory>

</PreferenceScreen>